--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.9.2",
+    "bower": "^1.3.12",
     "express": "^4.10.1",
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.18",
