--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.18",
     "passport": "^0.2.1",
-    "passport-http": "^0.2.2"
+    "passport-http": "^0.2.2",
+    "request": "^2.51.0"
   }
 }
