--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Garage sale web app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/DrivewayHunt/DrivewayHunt",
   "devDependencies": {
-    "chai": "^1.9.2",
+    "chai": "^1.10.0",
     "chai-http": "^1.0.0",
     "debowerify": "^1.1.1",
     "grunt": "^0.4.5",
@@ -26,9 +26,11 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jscs": "^1.0.0",
     "grunt-karma": "^0.9.0",
     "grunt-simple-mocha": "^0.4.0",
     "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4"
   },
