--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.9.0",
     "grunt-simple-mocha": "^0.4.0",
     "jasmine-core": "^2.1.3",
@@ -37,10 +39,11 @@
     "body-parser": "^1.9.2",
     "bower": "^1.3.12",
     "express": "^4.10.1",
-    "grunt": "^0.4.5",
     "grunt-libsass": "^0.2.0",
+    "grunt-sass": "^0.17.0",
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.18",
+    "node-sass": "^1.2.3",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2"
   }
