--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.9.2",
     "bower": "^1.3.12",
+    "busboy": "^0.2.9",
     "express": "^4.10.1",
+    "gridfs-stream": "^0.5.3",
     "grunt-libsass": "^0.2.0",
     "jwt-simple": "^0.2.0",
     "mongoose": "^3.8.18",
