--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,14 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.6",
+    "angular-route": "~1.3.6",
+    "angular-base64": "~2.0.3",
+    "angular-cookies": "~1.3.6"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.6"
+  }
 }
