--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
     "karma-jasmine": "^0.3.2",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "sinon": "^1.12.2"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
