--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular": "~1.3.6",
     "angular-route": "~1.3.6",
     "angular-base64": "~2.0.3",
-    "angular-cookies": "~1.3.6"
+    "angular-cookies": "~1.3.6",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6"
