--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-route": "~1.3.6",
     "angular-base64": "~2.0.3",
     "angular-cookies": "~1.3.6",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "angular-google-maps": "~2.0.12"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6"
