--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "karma": "^0.12.28",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4",
-    "sinon": "^1.12.2"
+    "nock": "^0.52.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
