re-resolve merge conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,5 @@ cloudinary.yml
 .sass-cache/
 app/.sass-cache/
 tests/angular_test_bundle.js
-app/**/*.css
-app/**/*.css.map
-.DS_Store
+**/*.css
+**/*.css.map
