initial fix of getSale and getItem middleware; needs more testing

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-libsass": "^0.2.0",
     "grunt-sass": "^0.17.0",
     "jwt-simple": "^0.2.0",
+    "lodash": "^2.4.1",
     "mongoose": "^3.8.18",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
