--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-base64": "~2.0.3",
     "angular-cookies": "~1.3.6",
     "lodash": "~2.4.1",
-    "angular-google-maps": "~2.0.12"
+    "angular-google-maps": "~2.0.12",
+    "ng-file-upload": "~2.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6"
