--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-cookies": "~1.3.6",
     "lodash": "~2.4.1",
     "angular-google-maps": "~2.0.12",
-    "ng-file-upload": "~2.0.5"
+    "ng-file-upload": "~2.0.5",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6"
