--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^1.0.0",
     "grunt-karma": "^0.9.0",
+    "grunt-mongoimport": "^0.1.5",
     "grunt-simple-mocha": "^0.4.0",
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
