--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,8 @@
     "after"      : false,
     "afterEach"  : false,
     "equal"      : false,
-    "angular"    : false
+    "angular"    : false,
+    "alert"      : false
   },
   "globalstrict": true,
   "quotmark": false,
